--- a/AndroidDemo/res/values/dimens.xml
+++ b/AndroidDemo/res/values/dimens.xml
@@ -3,5 +3,16 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="gap_5">5dp</dimen>
+    <dimen name="gap_10">10dp</dimen>
+    <dimen name="gap_20">20dp</dimen>
+    <dimen name="gap_30">30dp</dimen>
+    <dimen name="gap_40">40dp</dimen>
+    <dimen name="gap_50">50dp</dimen>
+    <dimen name="gap_60">60dp</dimen>
+    <dimen name="gap_70">70dp</dimen>
+    <dimen name="gap_80">80dp</dimen>
+    <dimen name="gap_90">90dp</dimen>
+    <dimen name="gap_100">100dp</dimen>
 
 </resources>
