--- a/AndroidDemo/res/layout/main_item_view.xml
+++ b/AndroidDemo/res/layout/main_item_view.xml
@@ -7,15 +7,15 @@
     <ImageView
         android:id="@+id/main_item_iv"
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/gap_50"
-        android:src="@drawable/ic_launcher" />
+        android:layout_height="wrap_content"
+        android:padding="@dimen/gap_10"
+        android:src="@drawable/main_item_icon" />
 
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="@dimen/gap_50"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/gap_10"
         android:layout_weight="1"
-        android:background="@drawable/main_item_selector"
         android:orientation="vertical"
         android:paddingTop="@dimen/gap_5" >
 
@@ -29,6 +29,7 @@
             android:id="@+id/main_item_brief_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/gap_5"
             android:text="" />
     </LinearLayout>
 
