--- a/AndroidDemo/res/layout/tab_viewpager_tab1.xml
+++ b/AndroidDemo/res/layout/tab_viewpager_tab1.xml
@@ -3,11 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    <TextView 
+
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="center"
         android:text="this is the first pager"
-        android:textSize="25sp"
-        android:gravity="center"/>
+        android:textColor="@color/black"
+        android:textSize="25sp" />
 
 </LinearLayout>
