--- a/AndroidDemo/res/values/color.xml
+++ b/AndroidDemo/res/values/color.xml
@@ -4,5 +4,7 @@
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="gray_level_4">#b4b4b4</color>
+    <color name="main_tab_text_select">#1DCAAC</color>
+    <color name="main_tab_text_normal">#CDCDCD</color>
 
 </resources>
