--- a/AndroidDemo/res/layout/fragment_activity_bottom.xml
+++ b/AndroidDemo/res/layout/fragment_activity_bottom.xml
@@ -72,7 +72,7 @@
             style="@style/viewpager_bottom_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="健康" />
+            android:text="生命周期" />
     </LinearLayout>
 
     <LinearLayout
@@ -95,7 +95,7 @@
             style="@style/viewpager_bottom_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="亲情" />
+            android:text="数据传递" />
     </LinearLayout>
 
 </LinearLayout>
