--- a/AndroidDemo/res/layout/fragment_activity_main.xml
+++ b/AndroidDemo/res/layout/fragment_activity_main.xml
@@ -7,7 +7,7 @@
     <include layout="@layout/fragment_activity_top" />
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/fragment_viewpager_content"
+        android:id="@+id/fragment_viewpager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1" >
