--- a/AndroidDemo/res/layout/main_item_view.xml
+++ b/AndroidDemo/res/layout/main_item_view.xml
@@ -30,6 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/gap_5"
+            android:lineSpacingMultiplier="1.3"
             android:maxLines="2"
             android:text="" />
     </LinearLayout>
