--- a/AndroidDemo/res/layout/main_item_view.xml
+++ b/AndroidDemo/res/layout/main_item_view.xml
@@ -23,6 +23,7 @@
             android:id="@+id/main_item_title_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:singleLine="true"
             android:text="" />
 
         <TextView
@@ -32,7 +33,8 @@
             android:layout_marginTop="@dimen/gap_5"
             android:lineSpacingMultiplier="1.3"
             android:maxLines="2"
-            android:text="" />
+            android:text=""
+            android:textColor="@color/gray_level_4" />
     </LinearLayout>
 
 </LinearLayout>
