--- a/AndroidDemo/res/values/array.xml
+++ b/AndroidDemo/res/values/array.xml
@@ -6,12 +6,16 @@
         <item>Fragment</item>
         <item>ViewPage实现Tab</item>
         <item>Fragment实现Tab</item>
+        <item>FragmentPagerAdapter + viewPager实现Tab</item>
+        <item>ViewPagerIndicator + viewPager实现Tab</item>
     </string-array>
     <string-array name="main_brief_list">
         <item>每隔一段时间执行，条件满足后退出</item>
         <item>Fragment基础：拥有自己独立的布局和生命周期，可以将Fragment定义到多个Activity中</item>
         <item>使用ViewPager实现Tab效果</item>
         <item>使用Fragment实现Tab效果，每个Tab为一个Fragment</item>
+        <item>FragmentPagerAdapter + viewPager实现Tab</item>
+        <item>ViewPagerIndicator 为一个第三方的开源框架</item>
     </string-array>
 
 </resources>
