--- a/AndroidDemo/res/values/array.xml
+++ b/AndroidDemo/res/values/array.xml
@@ -22,7 +22,7 @@
     <string-array name="main_tab_text">
         <item>学习记录</item>
         <item>家庭相册</item>
-        <item>美图欣赏</item>
+        <item>健康管理</item>
         <item>家庭互动</item>
     </string-array>
 
