--- a/AndroidDemo/res/layout/fragment_layout_1.xml
+++ b/AndroidDemo/res/layout/fragment_layout_1.xml
@@ -4,12 +4,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <ImageView
-        android:id="@+id/imageview"
+    <include layout="@layout/fragment_layout_top" />
+
+    <ListView
+        android:id="@+id/learn_rec_list"
+        style="@style/main_listview_layout_style"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="fitCenter"
-        android:src="@drawable/ic_launcher" >
-    </ImageView>
+        android:layout_height="wrap_content" >
+    </ListView>
 
 </LinearLayout>
