--- a/AndroidDemo/res/layout/fragment_layout_4.xml
+++ b/AndroidDemo/res/layout/fragment_layout_4.xml
@@ -4,12 +4,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <ImageView
-        android:id="@+id/imageview"
+    <include layout="@layout/fragment_layout_top" />
+
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="fitCenter"
-        android:src="@drawable/ic_launcher" >
-    </ImageView>
+        android:gravity="center"
+        android:text="forth tab" />
 
 </LinearLayout>
