--- a/AndroidDemo/res/layout/tab_item_view.xml
+++ b/AndroidDemo/res/layout/tab_item_view.xml
@@ -2,25 +2,38 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:background="@drawable/tab_menu_selector"
     android:gravity="center"
     android:orientation="vertical" >
 
-    <ImageView
-        android:id="@+id/imageview"
+    <FrameLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:focusable="false"
-        android:padding="3dp"
-        android:src="@drawable/fragment_tab_1_nor" >
-    </ImageView>
+        android:layout_height="wrap_content" >
+
+        <ImageView
+            android:id="@+id/imageview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/tab_first_img_selector" >
+        </ImageView>
+
+        <ImageView
+            android:id="@+id/news_tip_iv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:visibility="gone" >
+        </ImageView>
+    </FrameLayout>
 
     <TextView
         android:id="@+id/textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="首页"
-        android:textColor="#ffffff"
-        android:textSize="10sp" >
+        android:layout_marginBottom="1dp"
+        android:layout_marginTop="1dp"
+        android:textColor="@drawable/tab_men_text_color_selecor"
+        android:textSize="12sp" >
     </TextView>
 
 </LinearLayout>
