--- a/AndroidDemo/res/layout/fragment_layout_top.xml
+++ b/AndroidDemo/res/layout/fragment_layout_top.xml
@@ -4,14 +4,72 @@
     android:layout_height="45dp"
     android:background="@drawable/tab_top_bar"
     android:gravity="center"
-    android:orientation="vertical" >
+    android:orientation="horizontal" >
 
-    <TextView
-        android:id="@+id/fragment_layout_top_tv"
+    <ImageView
+        android:id="@+id/top_left_img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:textColor="@color/white"
-        android:textSize="20sp" />
+        android:layout_marginLeft="10dp"
+        android:src="@drawable/main_top_left_selector" />
+
+    <LinearLayout
+        android:id="@+id/top_med_layout"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:orientation="horizontal" >
+
+        <ImageView
+            android:id="@+id/top_turn_left_img"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/fragment_layout_top_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/app_name"
+            android:textColor="@color/white"
+            android:textSize="20sp" />
+
+        <ImageView
+            android:id="@+id/top_turn_right_img"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/top_right_1_img"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="10dp"
+        android:src="@drawable/main_top_right_1_selector"
+        android:visibility="gone" />
+
+    <ImageView
+        android:id="@+id/top_right_2_img"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="10dp"
+        android:src="@drawable/main_top_right_2_selector"
+        android:visibility="gone" />
+
+    <ImageView
+        android:id="@+id/top_right_3_img"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="10dp"
+        android:src="@drawable/main_top_right_3_selector"
+        android:visibility="gone" />
+
+    <ImageView
+        android:id="@+id/top_right_4_img"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="10dp"
+        android:src="@drawable/main_top_right_4_selector"
+        android:visibility="gone" />
 
 </LinearLayout>
