登录界面，edittext 去除默认格式background = @null checkbox 利用style设置自己的样式，去除默认用 button = @null

--- a/AndroidDemo/res/values/color.xml
+++ b/AndroidDemo/res/values/color.xml
@@ -8,5 +8,8 @@
     <color name="main_tab_text_select">#1DCAAC</color>
     <color name="main_tab_text_normal">#CDCDCD</color>
     <color name="GrayLight">#EEEEEE</color>
+    <color name="bar_nor">#1DCAAC</color>
+    <color name="bar_sel">#3BD9BE</color>
+    
 
 </resources>
