--- a/AndroidDemo/res/values/color.xml
+++ b/AndroidDemo/res/values/color.xml
@@ -3,6 +3,7 @@
 
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
+    <color name="gray_level_3">#999999</color>
     <color name="gray_level_4">#b4b4b4</color>
     <color name="fragment_bac">#F5F2F0</color>
     <color name="main_tab_text_select">#1DCAAC</color>
@@ -10,6 +11,6 @@
     <color name="GrayLight">#EEEEEE</color>
     <color name="bar_nor">#1DCAAC</color>
     <color name="bar_sel">#3BD9BE</color>
-    
+    <color name="alert">#F47474</color>
 
 </resources>
