--- a/AndroidDemo/res/layout/member_gridview_item.xml
+++ b/AndroidDemo/res/layout/member_gridview_item.xml
@@ -11,7 +11,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:src="@drawable/member_gridview_icon" />
+        android:src="@drawable/member_gridview_icon"
+        app:type="round" />
 
     <TextView
         android:id="@+id/member_gridview_item_text"
