--- a/AndroidDemo/res/values/styles.xml
+++ b/AndroidDemo/res/values/styles.xml
@@ -2,13 +2,13 @@
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
+        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
     <style name="AppBaseTheme" parent="android:Theme.Light">
         <!--
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
+            backward-compatibility can go here.
         -->
     </style>
 
@@ -37,10 +37,18 @@
     </style>
 
     <style name="tab_4_text">
-        <item name="android:textColor">@color/gray_level_4</item>
+        <item name="android:textColor">@color/gray_level_3</item>
         <item name="android:paddingLeft">10dp</item>
         <item name="android:paddingTop">3dp</item>
         <item name="android:paddingBottom">3dp</item>
+    </style>
+
+    <style name="more_ment_item_tv">
+        <item name="android:gravity">center</item>
+        <item name="android:paddingBottom">10dp</item>
+        <item name="android:paddingLeft">10dp</item>
+        <item name="android:paddingTop">10dp</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="LoginCheckboxTheme" parent="@android:style/Widget.CompoundButton.CheckBox">
