--- a/AndroidDemo/res/layout/add_member_manual.xml
+++ b/AndroidDemo/res/layout/add_member_manual.xml
@@ -16,7 +16,7 @@
         <EditText
             android:id="@+id/add_member_et"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="35dp"
             android:layout_marginRight="10dp"
             android:layout_weight="1"
             android:background="@drawable/add_member_edit_bg"
@@ -26,10 +26,13 @@
         <TextView
             android:id="@+id/add_member_search"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="35dp"
             android:background="@drawable/add_member_search_bg"
             android:gravity="center"
-            android:text="sear" />
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:text="@string/search"
+            android:textColor="@color/bar_sel" />
     </LinearLayout>
 
     <ListView
