--- a/AndroidDemo/res/layout/tab_item_view.xml
+++ b/AndroidDemo/res/layout/tab_item_view.xml
@@ -32,6 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="1dp"
         android:layout_marginTop="1dp"
+        android:singleLine="true"
         android:textColor="@drawable/tab_men_text_color_selecor"
         android:textSize="12sp" >
     </TextView>
