--- a/AndroidDemo/res/layout/login.xml
+++ b/AndroidDemo/res/layout/login.xml
@@ -24,6 +24,7 @@
             android:text="账 号" />
 
         <com.liuyunlong.androiddemo.widget.EditTextWithDel
+            android:id="@+id/login_username"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
@@ -53,6 +54,7 @@
             android:text="密 码" />
 
         <com.liuyunlong.androiddemo.widget.EditTextWithDel
+            android:id="@+id/login_password"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
@@ -88,6 +90,27 @@
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@id/auto_login_cbox"
             android:text="自动登录"
+            android:textColor="@color/main_tab_text_normal" />
+
+        <CheckBox
+            android:id="@+id/show_password_cb"
+            style="@style/LoginCheckboxTheme"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@id/auto_login_tv"
+            android:button="@null"
+            android:checked="false" />
+
+        <TextView
+            android:id="@+id/show_password_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@id/show_password_cb"
+            android:text="显示密码"
             android:textColor="@color/main_tab_text_normal" />
 
         <TextView
