--- a/AndroidDemo/res/values/array.xml
+++ b/AndroidDemo/res/values/array.xml
@@ -12,6 +12,7 @@
         <item>FragmenTabHost</item>
         <item>Android数据存储</item>
         <item>Android四大组件</item>
+        <item>Android手势识别</item>
     </string-array>
 
     <!-- ******************************************brief************************************ -->
@@ -26,6 +27,7 @@
         <item>FragmentTabHost实现Tab效果</item>
         <item>介绍Android中四大数据存储方式</item>
         <item>Activity, Service, Content Provider, BroadCast Receiver</item>
+        <item>GestureDetector和GestureOverlayView</item>
     </string-array>
 
     <!-- ********************************others**************************************************** -->
