--- a/AndroidDemo/res/values/array.xml
+++ b/AndroidDemo/res/values/array.xml
@@ -13,6 +13,7 @@
         <item>Android数据存储</item>
         <item>Android四大组件</item>
         <item>Android手势识别</item>
+        <item>Spinner</item>
     </string-array>
 
     <!-- ******************************************brief************************************ -->
@@ -28,6 +29,7 @@
         <item>介绍Android中四大数据存储方式</item>
         <item>Activity, Service, Content Provider, BroadCast Receiver</item>
         <item>GestureDetector和GestureOverlayView</item>
+        <item>Spinner实现二级联动</item>
     </string-array>
 
     <!-- ********************************others**************************************************** -->
@@ -49,6 +51,35 @@
         <item>Service</item>
         <item>Content Provider</item>
         <item>BroadCast Receiver</item>
+    </string-array>
+
+    <!-- *************************************spinner********************************** -->
+
+    <string-array name="province">
+        <item>-省份-</item>
+        <item>河北省</item>
+        <item>山西省</item>
+        <item>北京市</item>
+    </string-array>
+    <string-array name="hb">
+        <item>-城市-</item>
+        <item>承德市</item>
+        <item>邯郸市</item>
+        <item>廊坊市</item>
+    </string-array>
+    <string-array name="bj">
+        <item>-城市-</item>
+        <item>海淀区</item>
+        <item>朝阳区</item>
+        <item>崇文区</item>
+    </string-array>
+    <string-array name="shx">
+        <item>-城市-</item>
+        <item>大同市</item>
+        <item>临汾市</item>
+    </string-array>
+    <string-array name="moren">
+        <item>-城市-</item>
     </string-array>
 
 </resources>
