--- a/AndroidDemo/res/values/array.xml
+++ b/AndroidDemo/res/values/array.xml
@@ -13,11 +13,13 @@
         <item>Android数据存储</item>
         <item>Android四大组件</item>
         <item>Android手势识别</item>
-        <item>Spinner</item>
+        <item>Spinner，Toast</item>
         <item>日期和时间选择器</item>
         <item>Dialog</item>
         <item>AutoCompelete TextView</item>
         <item>SeekBar</item>
+        <item>图片选择预览</item>
+        <item>菜单</item>
     </string-array>
 
     <!-- ******************************************brief************************************ -->
@@ -33,11 +35,13 @@
         <item>介绍Android中四大数据存储方式</item>
         <item>Activity, Service, Content Provider, BroadCast Receiver</item>
         <item>GestureDetector和GestureOverlayView</item>
-        <item>Spinner实现二级联动</item>
+        <item>Spinner实现二级联动，自定义Toast显示内容</item>
         <item>DataPicker and TimePicker</item>
         <item>各种dialog类型，包括有单选和复选框等</item>
         <item>自动提示内容</item>
         <item>基本使用，实现图片切换，亮度调节</item>
+        <item>使用了Gallery和ImageViewSwitcher</item>
+        <item>三种菜单形式</item>
     </string-array>
 
     <!-- ********************************others**************************************************** -->
