--- a/AndroidDemo/res/layout/seek_bar.xml
+++ b/AndroidDemo/res/layout/seek_bar.xml
@@ -32,4 +32,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <ExpandableListView
+        android:id="@+id/expandableListView1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+    </ExpandableListView>
+
 </LinearLayout>
