--- a/AndroidDemo/res/layout/fragment_layout_2.xml
+++ b/AndroidDemo/res/layout/fragment_layout_2.xml
@@ -6,10 +6,18 @@
 
     <include layout="@layout/fragment_layout_top" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="second tab" />
+    <android.support.v4.view.ViewPager
+        android:id="@+id/collect_viewpager"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center" >
+
+        <android.support.v4.view.PagerTabStrip
+            android:id="@+id/collect_pager_tab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top" >
+        </android.support.v4.view.PagerTabStrip>
+    </android.support.v4.view.ViewPager>
 
 </LinearLayout>
