--- a/AndroidDemo/res/layout/data_store_page3.xml
+++ b/AndroidDemo/res/layout/data_store_page3.xml
@@ -3,6 +3,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    
+
+    <com.liuyunlong.androiddemo.widget.RoundImageView
+        android:id="@+id/content_provider_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp"
+        android:src="@drawable/daughter" />
+
+    <TextView
+        android:id="@+id/content_provider_brief"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:visibility="gone" />
 
 </LinearLayout>
