--- a/AndroidDemo/res/layout/handler_item.xml
+++ b/AndroidDemo/res/layout/handler_item.xml
@@ -15,6 +15,21 @@
         android:id="@+id/handler_count_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:onClick="doClick"
         android:text="0" />
+
+    <Button
+        android:id="@+id/start_service"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="doClick"
+        android:text="start Service" />
+
+    <Button
+        android:id="@+id/stop_service"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="doClick"
+        android:text="stop Service" />
 
 </LinearLayout>
